Asignacion de tickets en el back