@@ -1,6 +1,7 @@
 package servicedesk.entity.usuario;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
@@ -12,10 +13,12 @@ import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.EnumType;
 import jakarta.persistence.Enumerated;
+import jakarta.persistence.FetchType;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
 import jakarta.persistence.OneToOne;
 import jakarta.persistence.Table;
 import jakarta.persistence.UniqueConstraint;
@@ -23,6 +26,7 @@ import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import servicedesk.entity.ticket.Seccion;
 
 @Data
 @Builder
@@ -31,7 +35,7 @@ import lombok.NoArgsConstructor;
 @Entity
 @Table(name = "cuentas", uniqueConstraints = { @UniqueConstraint(columnNames = { "nombre_usuario" }) })
 public class Cuenta implements UserDetails {
-     @Id
+    @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
     @Column(name = "nombre_usuario", nullable = false)
@@ -44,12 +48,21 @@ public class Cuenta implements UserDetails {
     private Role role;
 
     @OneToOne(cascade = CascadeType.ALL)
-    @JoinColumn(name = "perfil_id") 
+    @JoinColumn(name = "perfil_id")
     private Perfil perfil;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "seccion_id")
+    private Seccion seccion;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority((role.name())));
+        if (role != null) {
+            return List.of(new SimpleGrantedAuthority(role.name()));
+        } else {
+            // Si role es nulo
+            return Collections.emptyList();
+        }
     }
 
     @Override
